--- a/src/web/templates/index.html
+++ b/src/web/templates/index.html
@@ -14,7 +14,7 @@
                 <li><a href="/profile" hx-get="/profile" hx-target="#main">Profile</a></li>
                 <li><a href="/login" hx-get="/login" hx-target="#main">Login</a></li>
                 <li><a href="/register" hx-get="/register" hx-target="#main">Register</a></li>
-                <li><a href="/hello" hx-get="/hello" hx-target="#main">Hello</a></li>
+                <!-- <li><a href="/hello" hx-get="/hello" hx-target="#main">Hello</a></li> -->
             </ul>
         </nav>
     </header>
