--- a/src/web/templates/profile.html
+++ b/src/web/templates/profile.html
@@ -1,4 +1,5 @@
-<h1>Welcome to your profile, {{ .user.Username }}</h1>
+<h1>{{ .user.Username }}</h1>
+<p>ID: {{ .user.ID }}</p>
 <p>Email: {{ .user.Email }}</p>
 <p>Account created on: {{ .user.CreationDate }}</p>
 <p>Last update: {{ .user.LastUpdateDate }}</p>
