--- a/src/web/templates/index.html
+++ b/src/web/templates/index.html
@@ -21,7 +21,7 @@
     <div id="main">
     </div>
     <footer>
-        <p>© 2024 Konstantin Runov IU7-64B Inc.</p>
+        <p>© 2024 Konstantin Runov IU7-64B</p>
     </footer>
 </body>
 </html>
