upload_codument WIP; not work yet

--- a/src/web/templates/index.html
+++ b/src/web/templates/index.html
@@ -15,6 +15,7 @@
                 <li><a href="/login" hx-get="/login" hx-target="#main">Login</a></li>
                 <li><a href="/register" hx-get="/register" hx-target="#main">Register</a></li>
                 <li><a href="/search" hx-get="/search" hx-target="#main">Search</a></li>
+                <li><a href="/d" hx-get="/d" hx-target="#main">Upload Document</a></li>
             </ul>
         </nav>
     </header>
